force-app/main/default/objects/Major_Event__c/Major_Event__c.object-meta.xml
<CustomObject>
    <description>A &quot;Major Event&quot; is a catastrophe, disaster, or other series of related incidents over a wide geographic area which have a widespread impact on many different entities, e.g. a large earthquake or hurricane, an epidemic, a series of wildfires over the course of a season.  Migrate existing values from the &quot;&quot;Job Category&quot;&quot; field as Major Event records and reconcile data.  
Create a single-selection lookup to Major Event from the objects:  Master Job, Job, Opportunity, Lead.  When selecting, exclude &quot;&quot;Inactive&quot;&quot; records from the option list.</description>
    <label>Major Event</label>
    <nameField>
        <label>Major Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Major Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>