force-app/main/default/objects/Major_Event__c/fields/ATI_Contact__c.field-meta.xml
<CustomField>
    <fullName>ATI_Contact__c</fullName>
    <description>Email Address of an individual or distribution list for the team that is coordinating ATI&apos;s response, if any.</description>
    <inlineHelpText>Email Address of an individual or distribution list for the team that is coordinating ATI&apos;s response, if any.</inlineHelpText>
    <label>ATI Contact</label>
    <type>Email</type>
</CustomField>