force-app/main/default/objects/Major_Event__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Field for entering additional information such as the impacted geographic area, references to ATI processes, resources, or policies, nature of the disaster, etc.</description>
    <inlineHelpText>Field for entering additional information such as the impacted geographic area, references to ATI processes, resources, or policies, nature of the disaster, etc.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>