force-app/main/default/objects/Major_Event__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Approximate end date for the event, if any.  Note that jobs may continue to be created after the End Date of the event itself.</description>
    <inlineHelpText>Approximate end date for the event, if any.  Note that jobs may continue to be created after the End Date of the event itself.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>