force-app/main/default/objects/Major_Event__c/fields/Major_Event_ID__c.field-meta.xml
<CustomField>
    <fullName>Major_Event_ID__c</fullName>
    <description>Unique ID.</description>
    <displayFormat>ME-{00000}</displayFormat>
    <label>Major Event ID</label>
    <type>AutoNumber</type>
</CustomField>