force-app/main/default/objects/Major_Event__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Approximate start date for the event.</description>
    <inlineHelpText>Approximate start date for the event.</inlineHelpText>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>