force-app/main/default/objects/Major_Event__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Indicates whether and how the event is currently used.</description>
    <inlineHelpText>Indicates whether and how the event is currently used.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ongoing</fullName>
                <default>true</default>
                <label>Ongoing</label>
            </value>
            <value>
                <fullName>Aftermath</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>