force-app/main/default/objects/Major_Event__c/validationRules/End_Date_Required_Status_AftermathInactv.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_Required_Status_AftermathInactv</fullName>
    <active>true</active>
    <description>End Date Required if Status is Aftermath or Inactive</description>
    <errorConditionFormula>AND(
ISBLANK( End_Date__c ),
OR(
ISPICKVAL( Status__c , &quot;Inactive&quot;),
ISPICKVAL( Status__c , &quot;Aftermath&quot;)
)
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>End Date Required if Status is Aftermath or Inactive</errorMessage>
</ValidationRule>